WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286606
WritingTools.ProofreadingAcceptReject API test is failing
https://bugs.webkit.org/show_bug.cgi?id=286606
Summary
WritingTools.ProofreadingAcceptReject API test is failing
Richard Robinson
Reported
2025-01-27 19:58:33 PST
rdar://143731399
Attachments
diff
(4.52 KB, patch)
2025-01-27 20:11 PST
,
Richard Robinson
a_protyasha
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2025-01-27 20:11:03 PST
Created
attachment 474034
[details]
diff
Abrar Rahman Protyasha
Comment 2
2025-01-27 22:25:58 PST
Comment on
attachment 474034
[details]
diff View in context:
https://bugs.webkit.org/attachment.cgi?id=474034&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/WritingTools.mm:306 > + TestWebKitAPI::Util::runFor(3.0_s);
Long delay!
Richard Robinson
Comment 3
2025-01-28 20:12:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39670
EWS
Comment 4
2025-01-29 15:27:36 PST
Committed
289525@main
(6f7da1ea96ee): <
https://commits.webkit.org/289525@main
> Reviewed commits have been landed. Closing PR #39670 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug