WritingTools.ProofreadingAcceptReject API test is failing https://bugs.webkit.org/show_bug.cgi?id=286606 rdar://143731399

Reviewed by Abrar Rahman Protyasha.

Update the selection restoration logic when a Writing Tools session ends to adhere to the correct behavior,
as described in the inline comments.

Also update the hard-coded delay in the test file to ensure that the animation is actually fully complete.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView didEndWritingToolsSession:accepted:]):
* Source/WebKit/WebKitSwift/WritingTools/WKIntelligenceReplacementTextEffectCoordinator.swift:
(WKIntelligenceReplacementTextEffectCoordinator.replacementEffectDidComplete(_:)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WritingTools.mm:
(-[WritingToolsWKWebView waitForProofreadingSuggestionsToBeReplaced]):

Canonical link: https://commits.webkit.org/289525@main